--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.13.0",
     "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.0.1",
     "@zxing/library": "^0.21.3",
     "apexcharts": "^4.5.0",
@@ -21,6 +22,8 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-loading-indicators": "^1.0.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.4",
     "react-router-dom": "^7.1.4",
     "react-scripts": "^5.0.1",
