--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,6 @@ jobs:
             git pull
             npm install
             npm run build
+            sudo nginx -t
+            sudo systemctl reload nginx
             # cp -r build/* /var/www/html   # Agar nginx se serve kar rahe ho
