--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,9 @@ jobs:
           script: |
             cd /Anemia-Detection-Frontend
             rm -rf build
-            git reset --hard
-            git pull
-            npm install 
+            
+            git pull origin main
+            npm install
             npm run build
             sudo nginx -t
             sudo systemctl reload nginx
